fix: update header styles to less-frequently wrap nav links to multiple lines

--- a/packages/uikit-workshop/src/sass/scss/04-components/_navigation.scss
+++ b/packages/uikit-workshop/src/sass/scss/04-components/_navigation.scss
@@ -49,6 +49,7 @@
   margin: 0;
   padding: 0;
   list-style: none;
+  flex-shrink: 0; // helps prevent top-level nav items from occasionally wrapping to multiple lines
 
   @media all and (max-width: $pl-bp-med) {
     order: 2; /* 3 */
